--- a/Contacts/templates/Contact_confirm_delete.html
+++ b/Contacts/templates/Contact_confirm_delete.html
@@ -1,4 +1,3 @@
-<!-- Contacts/templates/Contact_confirm_delete.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm Delete</title>
 </head>
+<style>
+    body {
+        font-family: 'Arial', sans-serif;
+        background: #e9ecef;
+        color: #495057;
+        padding-top: 40px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h1 {
+        color: #3498db;
+        font-size: 2.5em;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
+
+    p {
+        color: #495057;
+        font-size: 1.2em; 
+        margin-bottom: 20px;
+    }
+
+    form button,
+    form a {
+        padding: 10px 15px;
+        border-radius: 4px;
+        border: none;
+        font-size: 14px;
+        cursor: pointer;
+        text-decoration: none;
+        display: inline-block; 
+        margin: 5px;
+        transition: background-color 0.3s ease; 
+    }
+
+
+    form button {
+        background-color: #ff6b6b;
+        color: white;
+    }
+
+
+    form a {
+        background-color: #3498db;
+        color: white;
+        padding: 10px 15px;
+    }
+
+
+    form button:hover {
+        background-color: #ff8787;
+    }
+
+    form a:hover {
+        background-color: #51a7e8;
+    }
+
+
+footer p {
+    text-align: center;
+    font-size: 16px;
+    color: #008000;
+    font-weight: normal;
+    margin-top: 40px;
+}
+
+footer p:before {
+    content: "©Created by ";
+    font-size: 0.8em; 
+    color: #6c757d;
+}
+
+</style>
 <body>
     <h1>Confirm Delete</h1>
     
@@ -13,11 +88,11 @@
 
     <form method="post" action="{% url 'Contacts:contact_delete' pk=contact.pk %}">
         {% csrf_token %}
+        <input type="hidden" name="next" value="{{ request.path }}">
         <button type="submit">Delete</button>
         <a href="{% url 'Contacts:contact_detail' pk=contact.pk %}">Cancel</a>
     </form>
-
-    <!-- Copyright Line -->
+    
     <p style="text-align: center; font-size: 20px;">Copyright © Deepak Deokar</p>
 </body>
 </html>
