--- a/Contacts/templates/Contact_form.html
+++ b/Contacts/templates/Contact_form.html
@@ -1,4 +1,3 @@
-<!-- Contacts/templates/Contact_form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,114 +6,112 @@
     <title>{% if form.instance.pk %}Edit{% else %}Create{% endif %} Contact</title>
 </head>
 <style>
-  body {
-    font-family: 'Arial', sans-serif;
-    background: #e9ecef;
-    color: #495057;
-    padding-top: 40px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
+    body {
+        font-family: 'Arial', sans-serif;
+        background: #e9ecef;
+        color: #495057;
+        padding-top: 40px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
 
-h1 {
-    color: #3498db;
-    font-size: 2.5em;
-    font-weight: bold;
-    margin-bottom: 0.5em;
-}
+    h1 {
+        color: #3498db;
+        font-size: 2.5em;
+        font-weight: bold;
+        margin-bottom: 0.5em;
+    }
 
-form {
-    background: #fff;
-    padding: 2em;
-    border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    margin: auto;
-    width: fit-content;
-}
-
-/* Style for the paragraph tags within the form */
-form p {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    margin-top: auto;
-    color:#3498db;
-}
-
-/* Style for labels */
-form p label {
-    width: 50px; /* Adjust the width as needed */
-    margin-right: 10px;
-    text-align: right;
-}
-
-/* Style for inputs and textareas */
-form input[type="text"],
-form input[type="email"],
-form textarea {
-    padding: 10px;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-    flex-grow: 1;
-    margin-left: 10px; /* To match the margin on the label for alignment */
-}
-
-/* Style for submit button */
-input[type="submit"],
-button {
-    padding: 10px 15px;
-    border-radius: 4px;
-    border: none;
-    background-color: #3498db;
-    font-size: 14px;
-    cursor: pointer;
-    margin-top: 20px;
-}
+    form {
+        background: #fff;
+        padding: 2em;
+        border-radius: 8px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        margin: auto;
+        width: fit-content;
+    }
 
 
-button:hover {
-    background-color: #a1dbf1;
-}
-
-/* Specific style for the Back to Contact List button */
-a button {
-    background-color: #3498db;
-    text-decoration: none;
-}
-
-a button:hover {
-    background-color: #a1dbf1;
-}
-form p select:nth-of-type(1) {
-    width: 50px;
-    margin-left: 10px; /* or you can set a specific width */
-    max-width: 100px; /* Adjust this as needed */
-}
-
-/* This targets the second select element which might be your country select */
-form p select:nth-of-type(2) {
-    width: auto; /* or you can set a specific width */
-    max-width: 200px; /* Adjust this as needed to prevent overlap */
-}
-
-/* Adjust the label width to prevent overlapping */
-form p label {
-    min-width: 80px; /* Adjust this as needed to prevent overlap */
-    display: inline-block; /* This will ensure that the min-width is respected */
-    text-align: left;
-}
-/* Footer paragraph style */
-p {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-    color: #008000;
-    font-weight: bold;
-}
+    form p {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: auto;
+        color:#3498db;
+    }
 
 
+    form p label {
+        width: 50px; 
+        margin-right: 10px;
+        text-align: right;
+    }
+
+
+    form input[type="text"],
+    form input[type="email"],
+    form textarea {
+        padding: 10px;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        flex-grow: 1;
+        margin-left: 10px; 
+    }
+
+
+    input[type="submit"],
+    button {
+        padding: 10px 15px;
+        border-radius: 4px;
+        border: none;
+        background-color: #3498db;
+        font-size: 14px;
+        cursor: pointer;
+        margin-top: 20px;
+    }
+
+
+    button:hover {
+        background-color: #a1dbf1;
+    }
+
+
+    a button {
+        background-color: #3498db;
+        text-decoration: none;
+    }
+
+    a button:hover {
+        background-color: #a1dbf1;
+    }
+    form p select:nth-of-type(1) {
+        width: 50px;
+        margin-left: 10px; 
+        max-width: 100px; 
+    }
+
+
+    form p select:nth-of-type(2) {
+        width: auto; 
+        max-width: 200px; 
+    }
+
+
+    form p label {
+        min-width: 80px; 
+        display: inline-block;
+        text-align: left;
+    }
+
+    .footer {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 20px;
+        color: #008000;
+        font-weight: bold;
+    }
 </style>
 <body>
     <h1>{% if form.instance.pk %}Edit{% else %}Create{% endif %} a Contact</h1>
@@ -125,7 +122,8 @@ p {
         <button type="submit">Submit</button>
         <a href="{% url 'Contacts:contact_list' %}"><button type="button">Cancel</button></a>
     </form>
-  <!-- Copyright Line -->
-  <p style="text-align: center; font-size: 20px;">Copyright © Deepak Deokar</p>
+    <div class="footer">
+        Copyright © Deepak Deokar
+    </div>
 </body>
 </html>
