--- a/Contacts/templates/Contact_detail.html
+++ b/Contacts/templates/Contact_detail.html
@@ -90,6 +90,8 @@
     <div class="details">
         <p><strong>Name:</strong> {{ contact.name }}</p>
         <p><strong>Email:</strong> {{ contact.email }}</p>
+        <p><strong>Country:</strong>{{ contact.country }}</p>
+        <p><strong>Phone:</strong>{{ contact.phone }}</p>
         <p><strong>Notes:</strong> {{ contact.notes }}</p>
         <p><strong>Created Time:</strong> {{ object.created_at | date:"M d, Y, H:i" }}</p>
     </div>
