--- a/Contacts/templates/Update_contact.html
+++ b/Contacts/templates/Update_contact.html
@@ -115,7 +115,7 @@
     }
 </style>
 <body>
-    <h1>Edit a Contact</h1>
+    <h1>Update a Contact</h1>
     
     <form method="post" action="">
         {% csrf_token %}
